@startuml

title __APP's Class Diagram__\n

  package mic.alliwanna.be.londonguide {
    class BuildConfig {
    }
  }
  

  package mic.alliwanna.be.londonguide {
    class ExampleInstrumentedTest {
    }
  }
  

  package mic.alliwanna.be.londonguide {
    class FirstScreen {
    }
  }
  

  package mic.alliwanna.be.londonguide {
    class ImagePickerActivity {
    }
  }
  

  package mic.alliwanna.be.londonguide {
    class InfoPoiActivity {
    }
  }
  

  package mic.alliwanna.be.londonguide {
    class LoginScreen {
    }
  }
  

  package mic.alliwanna.be.londonguide {
    class MainActivity {
    }
  }
  

  package mic.alliwanna.be.londonguide {
    class POI {
    }
  }
  

  package mic.alliwanna.be.londonguide {
    class PoiAdapter {
    }
  }
  

  package mic.alliwanna.be.londonguide {
    class PoiDetailsActivity {
    }
  }
  

  package mic.alliwanna.be.londonguide {
    class PoiList {
    }
  }
  

  package mic.alliwanna.be.londonguide {
    class RegisterUser {
    }
  }
  

  package mic.alliwanna.be.londonguide {
    class ResetPassword {
    }
  }
  

  package mic.alliwanna.be.londonguide {
    class Reviews {
    }
  }
  

  package mic.alliwanna.be.londonguide {
    class ReviewsAdapter {
    }
  }
  

  package mic.alliwanna.be.londonguide {
    class ReviewsList {
    }
  }
  

  package mic.alliwanna.be.londonguide {
    class SplashScreen {
    }
  }
  

  package mic.alliwanna.be.londonguide {
    class SubmitReview {
    }
  }
  

  package mic.alliwanna.be.londonguide {
    class User {
    }
  }
  

  FirstScreen -up-|> AppCompatActivity
  ImagePickerActivity -up-|> AppCompatActivity
  InfoPoiActivity -up-|> AppCompatActivity
  LoginScreen -up-|> AppCompatActivity
  MainActivity -up-|> AppCompatActivity
  POI -up-|> Parcelable
  PoiAdapter -up-|> Adapter
  PoiAdapter o-- PoiInterface : listener
  PoiDetailsActivity -up-|> AppCompatActivity
  PoiList -up-|> PoiInterface
  PoiList -up-|> AppCompatActivity
  PoiList o-- PoiAdapter : adapter
  RegisterUser -up-|> AppCompatActivity
  ResetPassword -up-|> AppCompatActivity
  ReviewsAdapter -up-|> Adapter
  ReviewsList -up-|> AppCompatActivity
  ReviewsList o-- ReviewsAdapter : reviewsAdapter
  SplashScreen -up-|> AppCompatActivity
  SubmitReview -up-|> AppCompatActivity
  User -up-|> LoginScreen


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
